Users file changes